[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Blender.tscn" type="PackedScene" id=4]
[ext_resource path="res://FoodCart.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=5]

resource_name = "Enemy_Explosion_Shake_Anim"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:SHAKE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 25.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 750, 30 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 30, 210 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 30, 210 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 540, 30 )

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
SHAKE = 25.0

[node name="HUD" parent="." index="0" instance=ExtResource( 2 )]

[node name="ColorRect" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -240.0
margin_top = 30.0
margin_right = 1260.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.632812, 0.47631, 0.47631, 1 )
_sections_unfolded = [ "Anchor" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" type="Camera2D" parent="." index="2"]

position = Vector2( 508.366, 512.19 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Offset" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ScreenshakeTimer" type="Timer" parent="Camera" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Enemy_Explosion_Shake_Anim = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Player" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 510, 844 )

[node name="Floor" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 0, -90 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Floor" type="CollisionShape2D" parent="Floor" index="0"]

position = Vector2( 510, 1020 )
shape = SubResource( 1 )

[node name="LeftWall" type="CollisionShape2D" parent="Floor" index="1"]

position = Vector2( -267, 843 )
shape = SubResource( 2 )

[node name="RightWall" type="CollisionShape2D" parent="Floor" index="2"]

position = Vector2( 1290, 840 )
shape = SubResource( 3 )

[node name="FloorCollider" type="StaticBody2D" parent="Floor" index="3"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="FloorColliderShape" type="CollisionShape2D" parent="Floor/FloorCollider" index="0"]

position = Vector2( 510, 1020 )
scale = Vector2( 1.38122, 1 )
shape = SubResource( 4 )

[node name="EnemySpawnTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Blender" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 1140, 630 )

[node name="FoodCart" parent="." index="7" instance=ExtResource( 5 )]

position = Vector2( -177, 813 )
scale = Vector2( 1.42188, 1.42188 )

[connection signal="shooting" from="Player" to="." method="_on_Player_shooting"]

[connection signal="stop_shooting" from="Player" to="." method="_on_Player_stop_shooting"]

[connection signal="area_entered" from="Floor" to="." method="_on_Floor_area_entered"]

[connection signal="body_entered" from="Floor" to="." method="_on_Floor_body_entered"]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]


